# Satori

./: .bat  .gitignore  CMakeLists.txt  README.md  USER_MANUAL.md  idea.md
assets/ir_src/: Hall.wv  Room.wv
build_asio/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
build_asio/Testing/Temporary/: CTestCostData.txt
docs/: README.md  architecture.md  tasks.md
docs/architecture/: overview.md
docs/proposals/: room-convolution-reverb.md
docs/roadmap/: milestones.md
docs/troubleshooting/: win_audio.md
docs/ui/: ui-mono-depth-hierarchy.md
presets/: default.json
scripts/: build.ps1  build_all.ps1  build_debug.ps1  build_release.ps1  generate_room_ir_data.py  package_win.ps1
src/: main.cpp
src/audio/: WaveWriter.cpp  WaveWriter.h
src/dsp/: ConvolutionReverb.cpp  ConvolutionReverb.h  Denormals.h  Fft.cpp  Fft.h  Filter.cpp  Filter.h  PartitionedConvolver.cpp  PartitionedConvolver.h  RoomIrLibrary.cpp  RoomIrLibrary.h
src/engine/: StringParams.cpp  StringParams.h  StringSynthEngine.cpp  StringSynthEngine.h
src/midi/: MidiNoteLoader.cpp  MidiNoteLoader.h
src/synthesis/: KarplusStrongString.cpp  KarplusStrongString.h  KarplusStrongSynth.cpp  KarplusStrongSynth.h
src/win/app/: KeyboardSandboxMain.cpp  KnobTestMain.cpp  PresetManager.cpp  PresetManager.h  SatoriWinMain.cpp
src/win/audio/: AsioAudioEngine.cpp  AsioAudioEngine.h  AudioEngineTypes.h  RealtimeSynthRenderer.cpp  RealtimeSynthRenderer.h  SatoriRealtimeEngine.cpp  SatoriRealtimeEngine.h  UnifiedAudioEngine.cpp  UnifiedAudioEngine.h  WASAPIAudioEngine.cpp  WASAPIAudioEngine.h
src/win/resources/: NunitoFont.rc.in  ResourceIds.h
src/win/ui/: D2DHelpers.h  DWriteCompat.h  DebugOverlay.cpp  DebugOverlay.h  Direct2DContext.cpp  Direct2DContext.h  KeyboardKeymap.cpp  KeyboardKeymap.h  NunitoFont.h  ParameterKnob.cpp  ParameterKnob.h  ParameterSlider.cpp  ParameterSlider.h  RenderResources.h  UIModel.h  UISkin.cpp  UISkin.h  VirtualKeyboard.cpp  VirtualKeyboard.h  WaveformView.cpp  WaveformView.h
src/win/ui/layout/: UIHorizontalStack.cpp  UIHorizontalStack.h  UILayoutNode.h  UIOverlay.cpp  UIOverlay.h  UIStackPanel.cpp  UIStackPanel.h
src/win/ui/nodes/: ButtonBarNode.cpp  ButtonBarNode.h  DropdownSelectorNode.cpp  DropdownSelectorNode.h  FlowDiagramNode.cpp  FlowDiagramNode.h  HeaderBarNode.cpp  HeaderBarNode.h  HeaderNode.cpp  HeaderNode.h  KeyboardNode.cpp  KeyboardNode.h  KnobPanelNode.cpp  KnobPanelNode.h  ModuleCardNode.cpp  ModuleCardNode.h  ModulePreviewNode.cpp  ModulePreviewNode.h  RoomReverbPreviewNode.cpp  RoomReverbPreviewNode.h  SliderPanelNode.cpp  SliderPanelNode.h  TextBlockNode.cpp  TextBlockNode.h  TopBarNode.cpp  TopBarNode.h  WaveformNode.cpp  WaveformNode.h
tests/: convolution_reverb_tests.cpp  core_tests.cpp  main.cpp  midi_loader_tests.cpp  string_params_tests.cpp  voice_manager_tests.cpp  win_audio_tests.cpp
